# whenever-parser

./: Cargo.toml
src/: ast.rs  lexer.rs  lib.rs  parser.rs
tests/: dot.rs  fibo1.dot  hello.wnvr  smoke.rs
