[package]
name = "whenever-parser"
version = "0.2.0"
authors = ["Clément Gillard <clement.gillard@epita.fr>"]
edition = "2018"
description = "A parser for David Morgan-Mar's Whenever language (http://www.dangermouse.net/esoteric/whenever.html)"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
